# debias

./: .dockerignore  .gitignore  AGENTS.md  DECISION_MANIFOLD_CHARTER.md  Dockerfile  IMPLEMENTAION_PATH.md  IMPLEMENTATION_PPATH.md  README.md  pyproject.toml
docs/: corpus_specification_bundle_creation_v1.md  d1_candidate_atom_inventory.md  d2_bundle_validation.md  d3_ecological_validation.md  d4_reduced_ontology.md  extended_experiment_setup.md  external_excerpt_staging_v1.md  final_training_recipe_v1.md  first_experiment_setup.md  judge_experiment_matrix_v1.md  linguistic_ontology_and_project_charter.md  lrz_cluster_runbook.md  m2_executable_v1.md  mech_interp_judge_research_plan.md  ontology_definition_and_validation_plan.md  research_backbone_icml2026.md  step_by_step_experiment_plan.md
judge_deliberation/: EXPERIMENT_CHARTA.md  README.md  paper_story.tex  references.bib
paper/: post_training_judge_bias_workshop_draft.tex  references.bib  workshop_paper_draft.tex
requirements/: cluster.txt  sae-container-constraints.txt
tests/: test_build_bundle_validation_d2.py  test_build_d4_dataset_pack.py  test_bundle_corpus.py  test_cue_corpus.py  test_d4_anchored_style_bt_pairs.py  test_d4_bt_stage_contrast.py  test_d4_bt_stage_templates.py  test_d4_bundle_candidate_registry.py  test_d4_decision_manifold_factors.py  test_d4_decision_manifold_matrix.py  test_d4_decision_manifold_top_texts.py  test_d4_feature_perturbation.py  test_d4_human_llm_alignment.py  test_d4_human_llm_matched_pairs.py  test_d4_human_llm_stage_contrast.py  test_d4_human_llm_template_sensitivity.py  (+40 more)
(+279 files in other folders)
