[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisafety"
version = "0.1.0"
description = "Modular bias detection, stylometry, and activation steering workflows for the AI-AI bias seminar."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
    "pandas>=2.1",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "tqdm>=4.66",
    "sentencepiece>=0.1.99",
    "httpx>=0.27",
    "safetensors>=0.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
    "black>=24.4",
    "ruff>=0.6",
]
gpu = ["bitsandbytes>=0.43.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
